--- a/game-development.html
+++ b/game-development.html
@@ -430,7 +430,7 @@
 		        </div>
                 <div class="col-sm-12 col-md-12 col-lg-6 v-center my-auto">
                     <div class="app-hero-bnr wow fadeIn" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeIn;">
-                        <img src="images/banner/mobile-app-banner-img.png" alt="app development company" class="img-fluid">
+                        <img src="images/services/game-development/game-development-banner-img.webp" alt="app development company" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -503,33 +503,54 @@
 	<!-- Start Services -->
     <section class="services1 py-3 py-md-3 py-lg-5">
 		<div class="container">
-            <div class="row justify-content-center">
+			<div class="row justify-content-center">
 				<div class="col-lg-12">
 					<div id="game-app-services" class="carousel slide game-app-services" data-bs-ride="carousel" data-bs-interval="2000">
 						<div class="carousel-inner">
 							<div class="carousel-item active">
 								<div class="row">
-									<div class="col-md-4 mb-3">
-										<div class="card">
-											<div class="card-body game-services-body">
-												<h4 class="text-center">iOS Game Developement</h4>
-												<p class="card-text text-center">We collaborate with you to create the most outstanding iOS gaming app possible, building on our years of experience. Our professional team has designed and released hundreds of apps, allowing you to realize your idea. We provide expert iOS game app development services to ensure that your games and applications get the maximum possible ROI.</p>
+									<div class="col-md-4">
+										<div class="card card-flip">
+											<div class="card-front">
+												<div class="card-body game-img-body">
+													<img src="images/services/game-development/ios-game-development.webp" alt="Snow">
+													<h4 class="game-bottom-left text-white">iOS Game Developement</h4>
+												</div>
+											</div>
+											<div class="card-back">
+												<div class="card-body game-text-body my-auto">
+													<p class="card-text text-center text-white">We collaborate with you to create the most outstanding iOS gaming app possible, building on our years of experience. Our professional team has designed and released hundreds of apps, allowing you to realize your idea. We provide expert iOS game app development services to ensure that your games and applications get the maximum possible ROI.</p>
+												</div>
 											</div>
 										</div>
 									</div>
-									<div class="col-md-4 mb-3">
-										<div class="card">
-											<div class="card-body game-services-body">
-												<h4 class="text-center">Android Game Development</h4>
-												<p class="card-text text-center">Future Reality creates high-quality android games that generate a lot of downloads and make a fortune. Our expertise is in facilitating start-ups or small businesses, or big names in realizing their full potential by creating high-quality android mobile games that boost the brand and provide a user experience that draws players coming back for more.</p>
+									<div class="col-md-4">
+										<div class="card card-flip">
+											<div class="card-front">
+												<div class="card-body game-img-body">
+													<img src="images/services/game-development/android-game-development.webp" alt="Snow">
+													<h4 class="game-bottom-left text-white">Android Game Development</h4>
+												</div>
+											</div>
+											<div class="card-back">
+												<div class="card-body game-text-body my-auto">
+													<p class="card-text text-center text-white">Future Reality creates high-quality android games that generate a lot of downloads and make a fortune. Our expertise is in facilitating start-ups or small businesses, or big names in realizing their full potential by creating high-quality android mobile games that boost the brand and provide a user experience that draws players coming back for more.</p>
+												</div>
 											</div>
 										</div>
 									</div>
-									<div class="col-md-4 mb-3">
-										<div class="card">
-											<div class="card-body game-services-body">
-												<h4 class="text-center">Cross-Platform Game Development</h4>
-												<p class="card-text text-center">We help you create a game and overcome your apprehension about writing code for each of them and maintaining platforms. We are a cross-platform game development company that offers full-service game production from concept to final product. This enables us to provide the best gaming experience possible to our customers, from graphic design to user interface, from unique mechanics to marketing strategy.</p>
+									<div class="col-md-4">
+										<div class="card card-flip">
+											<div class="card-front">
+												<div class="card-body game-img-body">
+													<img src="images/services/game-development/cross-platform-game-development.webp" alt="Snow">
+													<h4 class="game-bottom-left text-white">Cross-Platform Game Development</h4>
+												</div>
+											</div>
+											<div class="card-back">
+												<div class="card-body game-text-body my-auto">
+													<p class="card-text text-center text-white">We help you create a game and overcome your apprehension about writing code for each of them and maintaining platforms. We are a cross-platform game development company that offers full-service game production from concept to final product. This enables us to provide the best gaming experience possible to our customers, from graphic design to user interface, from unique mechanics to marketing strategy.</p>
+												</div>
 											</div>
 										</div>
 									</div>
@@ -537,27 +558,48 @@
 							</div>
 							<div class="carousel-item">
 								<div class="row">
-									<div class="col-md-4 mb-3">
-										<div class="card">
-											<div class="card-body game-services-body">
-												<h4 class="text-center">Unreal Engine Game Development</h4>
-												<p class="card-text text-center">As a game producer, you are constantly seeking new methods to improve the realism of your games. Our Unreal Engine game development services can assist you in doing this. With our Unreal Engine game development services, you can create AAA games on a budget. Professional game designers, 3D designers, and high-performance programmers are among our services.</p>
+									<div class="col-md-4">
+										<div class="card card-flip">
+											<div class="card-front">
+												<div class="card-body game-img-body">
+													<img src="images/services/game-development/unity-3d-game-development.webp" alt="Snow">
+													<h4 class="game-bottom-left text-white">Unity 3D Game Development</h4>
+												</div>
+											</div>
+											<div class="card-back">
+												<div class="card-body game-text-body my-auto">
+													<p class="card-text text-center text-white">Unity3D is a cross-platform game developing engine that allows you to create games for several platforms using a single codebase. We love making beautiful web, mobile, and console games with Unity 3D in a robust, fully integrated development environment. With years of game programming and development expertise in Unity 3D, our team of experts will make your game fantasies a reality.</p>
+												</div>
 											</div>
 										</div>
 									</div>
-									<div class="col-md-4 mb-3">
-										<div class="card">
-											<div class="card-body game-services-body">
-												<h4 class="text-center">Unity3D Game Development</h4>
-												<p class="card-text text-center">Unity3D is a cross-platform game developing engine that allows you to create games for several platforms using a single codebase. We love making beautiful web, mobile, and console games with Unity 3D in a robust, fully integrated development environment. With years of game programming and development expertise in Unity 3D, our team of experts will make your game fantasies a reality.</p>
+									<div class="col-md-4">
+										<div class="card card-flip">
+											<div class="card-front">
+												<div class="card-body game-img-body">
+													<img src="images/services/game-development/html-game-development.webp" alt="Snow">
+													<h4 class="game-bottom-left text-white">HTML Games Development</h4>
+												</div>
+											</div>
+											<div class="card-back">
+												<div class="card-body game-text-body my-auto">
+													<p class="card-text text-center text-white">Although HTML5 mobile game production was not very popular in the past, it has grown in popularity due to new features such as ease of use, low cost, etc. Many individuals, however, develop HTML5 games for SEO - promotion through app stores or as a different marketing approach. Future Reality assists you in creating unique HTML5 games for mobile devices and tablets.</p>
+												</div>
 											</div>
 										</div>
 									</div>
-									<div class="col-md-4 mb-3">
-										<div class="card">
-											<div class="card-body game-services-body">
-												<h4 class="text-center">HTML Games Development</h4>
-												<p class="card-text text-center">Although HTML5 mobile game production was not very popular in the past, it has grown in popularity due to new features such as ease of use, low cost, etc. Many individuals, however, develop HTML5 games for SEO - promotion through app stores or as a different marketing approach. Future Reality assists you in creating unique HTML5 games for mobile devices and tablets.</p>
+									<div class="col-md-4">
+										<div class="card card-flip">
+											<div class="card-front">
+												<div class="card-body game-img-body">
+													<img src="images/services/game-development/unreal-engine-game-development.webp" alt="Snow">
+													<h4 class="game-bottom-left text-white">Unreal Engine Game Development</h4>
+												</div>
+											</div>
+											<div class="card-back">
+												<div class="card-body game-text-body my-auto">
+													<p class="card-text text-center text-white">As a game producer, you are constantly seeking new methods to improve the realism of your games. Our Unreal Engine game development services can assist you in doing this. With our Unreal Engine game development services, you can create AAA games on a budget. Professional game designers, 3D designers, and high-performance programmers are among our services.</p>
+												</div>
 											</div>
 										</div>
 									</div>
@@ -594,35 +636,7 @@
 						</div>
 					</div>
 				</div>
-
-				<!-- <div class="col-12 text-center mt-3">
-					<a class="btn mb-3 mr-1" href="#game-app-services" role="button" data-bs-slide="prev">
-						<i class="fa fa-arrow-left"></i>
-					</a>
-					<a class="btn mb-3" href="#game-app-services" role="button" data-bs-slide="next">
-						<i class="fa fa-arrow-right"></i>
-					</a>
-				</div> -->
 			</div>
-		</div>
-	</section>
-	<!--End Service-->
-
-    <!-- Start Services -->
-    <section class="custom-app-service py-3 py-md-3 py-lg-5">
-		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-lg-6 wow fadeInLeft my-auto">
-					<div class="common-heading text-l">
-                        <h2 class="common-heading">Custom Game App Development Services</h2>
-                        <p>We are a group of extraordinarily creative and active game fans that have joined forces with astute engineers to create amazing games that will provide more entertainment and delight to our gamers. Our company offers a myriad of services, including game design and development, 3D animation and graphic design, video filming and special effects, and video editing.</p>
-                        <p class="pt-2">We work with both 2D and 3D games and can tailor our services to your specific needs. We strive to provide high-quality game development services on schedule and at reasonable costs.</p>
-                    </div>
-				</div>
-                <div class="col-lg-6 wow fadeInRight">
-                    <img src="images/services/2.png" alt="" class="img-fluid">
-                </div>
-            </div>
 		</div>
 	</section>
 	<!--End Service-->
@@ -679,6 +693,27 @@
         </div>
 	</section>
     <!-- End Services -->
+
+    <!-- Start Services -->
+    <section class="custom-app-service py-3 py-md-3 py-lg-5">
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-lg-6 wow fadeInLeft my-auto">
+					<div class="common-heading text-l">
+                        <h2 class="common-heading">Custom Game App Development Services</h2>
+                        <p>We are a group of extraordinarily creative and active game fans that have joined forces with astute engineers to create amazing games that will provide more entertainment and delight to our gamers. Our company offers a myriad of services, including game design and development, 3D animation and graphic design, video filming and special effects, and video editing.</p>
+                        <p class="pt-2">We work with both 2D and 3D games and can tailor our services to your specific needs. We strive to provide high-quality game development services on schedule and at reasonable costs.</p>
+                    </div>
+				</div>
+                <div class="col-lg-6 wow fadeInRight">
+                    <img src="images/services/2.png" alt="" class="img-fluid">
+                </div>
+            </div>
+		</div>
+	</section>
+	<!--End Service-->
+
+	
 
 	<!-- Start Benefits -->
     <section class="game-benefits-section py-3 py-md-3 py-lg-5">
