--- a/index.html
+++ b/index.html
@@ -599,8 +599,8 @@
                                 <h4>Animation</h4>
                             </div>
                         </div>
-                        <div class="pf-item large-width large-height set-bg wedding" data-setbg="images/home/industrial-automation.png" style="background-image: url(&quot;images/home/industrial-automation.png&quot;); position: absolute; left: 59.9699%; top: 760px;">
-                            <a href="images/home/industrial-automation.png" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-item large-width large-height set-bg wedding" data-setbg="images/home/industiral-automation.webp" style="background-image: url(&quot;images/home/industiral-automation.webp&quot;); position: absolute; left: 59.9699%; top: 760px;">
+                            <a href="images/home/industiral-automation.webp" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
                                 <h4>Industrial Automation</h4>
                             </div>
