--- a/game-development.html
+++ b/game-development.html
@@ -27,7 +27,7 @@
 	<!-- End Progress Bar -->
 
 	<!-- Start Header -->
-	<header class="nav-bg-b main-header navfix fixed-top menu-white">
+	<header class="header-pr nav-bg-w main-header navfix fixed-top menu-white">
 		<div class="container-fluid m-pad">
 			<div class="menu-header">
 				<div class="dsk-logo">
@@ -749,7 +749,7 @@
 			<div class="col-lg-6 my-auto wow fadeInLeft px-4 ps-lg-5">
 				<h2 class="common-heading text-white">2D Game Development</h2>
 				<p class="text-white">We are a one-stop source for 2D game development services. We create games that are engaging, entertaining, and of high quality. We have expertise working in various genres and practices like design, scripting, 2D art assets and implementation, audio implementation, and 3D asset integration. Our game development team takes your initial game concept to transform it into a one-of-a-kind 2D game for Android, iOS, web, or any other platform.</p>
-				<div class="mt-5 game-button">
+				<div class="mt-5 mt-md-3 game-button">
 					<a href="#" class="build-game-btn">Build Your Own Game</a>
 				</div>
 			</div>
@@ -769,7 +769,7 @@
 			<div class="col-lg-6 my-auto wow fadeInRight px-4 pe-lg-5">
 				<h2 class="common-heading mb10 text-white">3D Game Development</h2>
 					<p class="text-white">We think you deserve to create the best 3D game imaginable, and we employ an all-inclusive strategy to get you there faster. This implies that we provide all 3D game development services required to produce your 3D game, including art development, software development, and project planning. Our goal is to make games that you can be excited about. Our team members have extensive expertise in designing 3D games of many genres, from casual to violent.</p>
-				<div class="mt-5 game-button">
+				<div class="mt-5 mt-md-3 game-button">
 					<a href="#" class="build-game-btn">Build Your Own Game</a>
 				</div>
 			</div>
@@ -798,14 +798,14 @@
 	<section class="ar-game-section py-3 py-md-3 py-lg-5">
 		<div class="container">
 			<div class="row justify-content-center">
-				<div class="col-sm-12 col-md-6 my-auto wow fadeInLeft">
-					<h2 class="pt-2 text-white">AR Game Development</h2>
+				<div class="col-lg-6 my-auto wow fadeInLeft">
+					<h2 class="common-heading mb10 text-white">AR Game Development</h2>
 					<p class="mb30 text-white">We are a full-service augmented reality game development company dedicated to making your AR gaming dreams a reality. We assist you in understanding how an AR game is made, what it takes to create a game and the business elements of owning an AR game. Our specialists have been building AR games for years and have worked with various game themes and concepts.</p>
-					<div class="mt-5">
+					<div class="mt-5 mt-md-3 game-button">
 						<a href="#" class="build-game-btn">Build Your Own Game</a>
 					</div>
 				</div>
-				<div class="col-sm-12 col-md-6 wow fadeInRight">
+				<div class="col-lg-6 wow fadeInRight">
 					<img src="images/services/game-development/ar-game-development-image.webp" alt="AR Game Development" class="game-img img-fluid">
 				</div>
 			</div>
@@ -817,13 +817,13 @@
 	<section class="vr-game-section py-3 py-md-3 py-lg-5">
 		<div class="container">
 			<div class="row justify-content-center">
-				<div class="col-sm-12 col-md-6 wow fadeInLeft">
+				<div class="col-lg-6 wow fadeInLeft">
 					<img src="images/services/game-development/vr-game-development-image.webp" alt="VR Game Development" class="game-img img-fluid">
 				</div>
-				<div class="col-sm-12 col-md-6 my-auto wow fadeInRight">
-					<h2 class="pt-2 text-white">VR Game Development</h2>
+				<div class="col-lg-6 my-auto wow fadeInRight">
+					<h2 class="common-heading mb10 text-white">VR Game Development</h2>
 					<p class="mb30 text-white">Our team specializes in immersive virtual reality game creation, VR simulation development, and mobile game development. We are a VR game development company that offers high-quality creative, and engaging VR gaming experiences. With hundreds of high-profile clients worldwide, we have the expertise to provide excellent consultation and development for your project.</p>
-					<div class="mt-5">
+					<div class="mt-5 mt-md-3 game-button">
 						<a href="#" class="build-game-btn">Build Your Own Game</a>
 					</div>
 				</div>
@@ -836,14 +836,14 @@
 	<section class="mr-game-section py-3 py-md-3 py-lg-5">
 		<div class="container">
 			<div class="row justify-content-center">
-				<div class="col-sm-12 col-md-6 my-auto wow fadeInLeft">
-					<h2 class="pt-2 text-white">MR Game Development</h2>
+				<div class="col-lg-6 my-auto wow fadeInLeft">
+					<h2 class="common-heading mb10 text-white">MR Game Development</h2>
 					<p class="mb30 text-white">We offer mixed reality game development services to assist you in creating the most awesome mixed reality games. We generate stunning graphics and high-quality 3D environments to provide your games with an immersive feel. We have worked on various projects, including indie games, online games, theme park installations, and MR productions. We collaborate with creative teams, marketers, and brands to create incredible experiences.</p>
-					<div class="mt-5">
+					<div class="mt-5 mt-md-3 game-button">
 						<a href="#" class="build-game-btn">Build Your Own Game</a>
 					</div>
 				</div>
-				<div class="col-sm-12 col-md-6 wow fadeInRight">
+				<div class="col-lg-6 wow fadeInRight">
 					<img src="images/services/game-development/mr-game-development-image.webp" alt="Mr Game Development" class="game-img img-fluid">
 				</div>
 			</div>
@@ -914,7 +914,7 @@
 	<!--End Case Studies-->
 
 	<!-- Start Game Section -->
-	<section class="game-development-section py-3 py-md-3 py-lg-5 ">
+	<section class="game-development-section py-3 py-md-3 py-lg-5">
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-sm-10 my-auto">
@@ -1253,7 +1253,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					<div class="ptag wow fadeInDown" style="visibility: visible; animation-name: fadeInDown;">
-						<div class="vertical-timeline vertical-timeline--animate vertical-timeline--one-column mt-4">
+						<div class="vertical-timeline vertical-timeline--animate vertical-timeline--one-column mt-0 mt-md-4">
 							<div class="vertical-timeline-item vertical-timeline-element">
 								<div>
 									<span class="vertical-timeline-element-icon bounce-in">
@@ -1365,18 +1365,18 @@
     <!-- End Benefits -->
 
     <!-- Start Offline Multiplayer Game -->
-    <section class="offline-game">
+    <section class="offline-game-section">
 		<div class="row">
 			<div class="col-lg-6 wow fadeInLeft">
 				<img src="images/services/2d-3d-game.jpg" alt="" class="img-fluid">
 			</div>
-			<div class="col-lg-6 my-auto wow fadeInRight pe-5">
+			<div class="col-lg-6 my-auto wow fadeInRight px-4 pe-lg-5 mt-3 mt-md-0">
 				<div class="common-heading text-l">
 					<h2 class="common-heading mb10">Offline Multiplayer Games</h2>
 					<p>We operate in every area of game creation, making high offline multiplayer games while utilizing cutting-edge technology and attraction and retention strategies. Our skilled game designers can create offline solid multiplayer games for PC, Mac, and mobile devices. Our services are designed to meet each of our client's specific requirements.</p>
 				</div>
-				<div class="mt-5">
-					<a href="#">Build Your Own Game</a>
+				<div class="mt-5 mt-md-3 game-button">
+					<a href="#" class="build-game-btn">Build Your Own Game</a>
 				</div>
 			</div>
 		</div>
@@ -1386,16 +1386,16 @@
 	<!-- Start Game Character Creation Game -->
     <section class="character-game">
 		<div class="row">
-			<div class="col-lg-6 my-auto wow fadeInLeft ps-5">
+			<div class="col-lg-6 my-auto wow fadeInLeft px-4 ps-lg-5 mt-3 mt-md-0">
 				<div class="common-heading text-l">
 					<h2 class="common-heading mb10">Game Character Creation</h2>
 					<p>In today's competitive gaming world, we provide high-quality game character development services to businesses that demand a particular skill set. Our staff assists you in honing your concept and developing unique characters that will instantly improve the admirable quality of your project. We help you launch your next successful game by creating characters that bring it to players' lives.</p>
 				</div>
-				<div class="mt-5">
-					<a href="#">Build Your Own Game</a>
+				<div class="mt-5 mt-md-3 game-button">
+					<a href="#" class="build-game-btn">Build Your Own Game</a>
 				</div>
 			</div>
-			<div class="col-lg-6 wow fadeInRight">
+			<div class="col-lg-6 wow fadeInRight mt-3 mt-md-0">
 				<img src="images/services/2d-3d-game.jpg" alt="" class="img-fluid">
 			</div>
 		</div>
@@ -1413,7 +1413,7 @@
 					<h2 class="common-heading mb10">Game UI/UX Design Service</h2>
 					<p>A well-designed game UI/UX sets the foundation for a successful game. Our expert designers will assist you in developing a functional interface that works well with both the hardware and the game. In contrast, our UX designers will create bespoke visuals and animations to capture your audience, bringing your game to life with clean and attractive UX design. We build creative and custom gamification solutions that correctly match your objectives by utilizing cutting-edge technology.</p>
 				</div>
-				<div class="mt-5">
+				<div class="mt-5 mt-md-3 game-button">
 					<a href="#">Build Your Own Game</a>
 				</div>
 			</div>
@@ -1429,7 +1429,7 @@
 					<h2 class="common-heading mb10">Mobile Game Art And Asset Creation</h2>
 					<p>We develop engaging, aesthetically rich, and entertaining 2D and 3D graphics to help move your project forward. Our crew is quick, reliable, and friendly, with decades of expertise in several genres. We create your game from scratch, or you can use our vision and expertise to revitalize an existing project. Our mobile game art and asset creation services offer quick turnarounds.</p>
 				</div>
-				<div class="mt-5">
+				<div class="mt-5 mt-md-3 game-button">
 					<a href="#">Build Your Own Game</a>
 				</div>
 			</div>
