--- a/index.html
+++ b/index.html
@@ -2745,14 +2745,15 @@
 	<script src="js/plugin.min.js"></script>
 	<script src="js/preloader.js"></script>
 	<script src="js/dark-mode.js"></script>
-	<script src="js/progress-bar.js"></script>
-	<script src='js/scroll-out.min.js'></script>
+	
+	<!-- <script src='js/scroll-out.min.js'></script> -->
 	<script src='js/isotope.pkgd.min.js'></script>
 	<script src="js/masonry.pkgd.min.js"></script>
 	<script src="js/owl.carousel.js"></script>
 	<script src="js/owl.navigation.js"></script>
 	<script src="js/main.js"></script>
 	<script src="js/font-awsome.js"></script>
+	<script src="js/progress-bar.js"></script>
 
 	<script>
 	$(window).on('load', function() {
