--- a/game-development.html
+++ b/game-development.html
@@ -699,7 +699,8 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-lg-6 wow fadeInLeft">
-                    <img src="images/services/game-development/custom-app-service-image.webp" alt="Custom App Service" class="img-fluid">
+                    <img src="images/services/game-development/custom-app-service-image.webp" alt="Custom App Service" class="img-fluid custom-app-service-image">
+					<img src="images/services/game-development/custom-app-service-animation.webp" alt="Custom App Service" class="img-fluid custom-app-service-animation">
                 </div>
 				<div class="col-lg-6 wow fadeInRight mt-4 my-lg-auto">
 					<div class="common-heading text-l">
@@ -717,7 +718,7 @@
 							<p class="game-get-button mt-3">GET IN TOUCH</p>
 						</div>
 						<div class="hire-img">
-							<img src="images/services/game-development/custom-app-service.webp" alt="Custom App Service" class="img-fluid">
+							<img src="images/services/game-development/hire-game-developer1.webp" alt="Custom App Service" class="img-fluid hire-game-developer1">
 						</div>
 					</div>
 				</div> 
@@ -754,7 +755,8 @@
 				</div>
 			</div>
 			<div class="col-lg-6 wow fadeInRight">
-				<img src="images/services/game-development/2d-game-image.webp" alt="" class="img-fluid">
+				<img src="images/services/game-development/2d-game-animation.webp" alt="" class="img-fluid twod-game-animation">
+				<img src="images/services/game-development/2d-game-image.webp" alt="" class="img-fluid twod-game-image">
 			</div>
 		</div>
 	</section>
@@ -773,6 +775,20 @@
 					<a href="#" class="build-game-btn">Build Your Own Game</a>
 				</div>
 			</div>
+		</div>
+
+		<div class="row justify-content-center mt-5">
+			<div class="col-lg-6 wow fadeInUp my-auto">
+				<div class="hire-div">
+					<div class="hire-us">
+						<p class="text-white">Hire Top Mobile Game Developers for Building Immersive Games</p>
+						<p class="game-get-button mt-3">GET IN TOUCH</p>
+					</div>
+					<div class="hire-img">
+						<img src="images/services/game-development/hire-game-developer2.webp" alt="Custom App Service" class="img-fluid hire-game-developer2">
+					</div>
+				</div>
+			</div> 
 		</div>
 	</section>
     <!-- End 3D Game -->
@@ -807,6 +823,7 @@
 				</div>
 				<div class="col-lg-6 wow fadeInRight">
 					<img src="images/services/game-development/ar-game-development-image.webp" alt="AR Game Development" class="game-img img-fluid">
+					<img src="images/services/game-development/ar-game-development-animation.webp" alt="AR Game Development" class="ar-game-development-animation img-fluid">
 				</div>
 			</div>
 		</div>
